# WinShellX

./: .gitignore  CMakeLists.txt  RUN_FROM_EXPLORER.md  USER_MANUAL.md  build.bat  compile_commands.json  plan.md  ppt.md  run_winshellx.bat  test.bat  wsx_bat_demo.bat
include/commands/: AliasCommand.h  BatCommand.h  BuiltInCommands.h  CdCommand.h  ClsCommand.h  CopyCommand.h  DelCommand.h  DirCommand.h  EchoCommand.h  ExitCommand.h  FgCommand.h  HelpCommand.h  HistoryCommand.h  JobsCommand.h  KillJobCommand.h  MkdirCommand.h  MoveCommand.h  RenCommand.h  RmdirCommand.h  SetCommand.h  TaskKillCommand.h  TaskListCommand.h  TopCommand.h  TypeCommand.h  UnaliasCommand.h  WhereCommand.h
include/shell/: AliasStore.h  CommandInfo.h  CommandParser.h  CommandRegistry.h  CommandResolver.h  CompletionProvider.h  ConsoleControl.h  ExternalCommandRunner.h  HistoryStore.h  ICommand.h  JobManager.h  LineEditor.h  ParsedCommand.h  Shell.h  ShellContext.h  ShellExecutor.h  ShellInputParser.h
include/utils/: ConsoleStyle.h  EnvUtils.h  GitUtils.h  PathUtils.h  StringUtils.h  WinApiError.h
src/commands/: AliasCommand.cpp  BatCommand.cpp  BuiltInCommands.cpp  CdCommand.cpp  ClsCommand.cpp  CopyCommand.cpp  DelCommand.cpp  DirCommand.cpp  EchoCommand.cpp  ExitCommand.cpp  FgCommand.cpp  HelpCommand.cpp  HistoryCommand.cpp  JobsCommand.cpp  KillJobCommand.cpp  MkdirCommand.cpp  MoveCommand.cpp  RenCommand.cpp  RmdirCommand.cpp  SetCommand.cpp  TaskKillCommand.cpp  TaskListCommand.cpp  TopCommand.cpp  TypeCommand.cpp  UnaliasCommand.cpp  WhereCommand.cpp
src/shell/: AliasStore.cpp  CommandParser.cpp  CommandRegistry.cpp  CommandResolver.cpp  CompletionProvider.cpp  ConsoleControl.cpp  ExternalCommandRunner.cpp  HistoryStore.cpp  JobManager.cpp  LineEditor.cpp  Shell.cpp  ShellInputParser.cpp
src/utils/: ConsoleStyle.cpp  EnvUtils.cpp  GitUtils.cpp  PathUtils.cpp  StringUtils.cpp  WinApiError.cpp
tests/: command_tests.cpp  manual_test_cases.md  parser_tests.cpp  test_framework.h  test_main.cpp
周记/: 1week.tex  2week.tex  a.xml  content.txt
周记/最终报告/: main.tex
周记/最终报告/figures/: flowcharts.md
